# django-svg-icon-tags

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
django_svg_icon_tags/: .gitignore  __init__.py  apps.py
django_svg_icon_tags.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
django_svg_icon_tags/templates/svg_icon_tags/: icon.html
django_svg_icon_tags/templatetags/: svg_icon_tags.py
examples/: animate.html  basic_usage.html  condition.html  dashboard.html  forms_with_icons.html  loop.html  navigation_menu.html  product_card.html
tests/: test_security.py  test_templatetags.py
