[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-svg-icon-tags"
version = "1.0.0"
description = "Secure and flexible Django template tags for SVG icons"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "Django>=3.2",
]
optional-dependencies.dev = [
    "pytest>=7.0.0",
    "pytest-django>=4.5.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/reza-bayat/django-svg-icon-tags"
Documentation = "https://github.com/reza-bayat/django-svg-icon-tags#readme"
Repository = "https://github.com/reza-bayat/django-svg-icon-tags"
Issues = "https://github.com/reza-bayat/django-svg-icon-tags/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["django_svg_icon_tags*"]

[tool.setuptools.package-data]
django_svg_icon_tags = ["templates/svg_icon_tags/*.html", "templatetags/*.py"]