[metadata]
name = django-svg-icon-tags
version = 1.0.0
description = Secure and flexible Django template tags for SVG icons
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = your.email@example.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Framework :: Django :: 4.2
    Framework :: Django :: 5.0
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    Django>=3.2

[options.package_data]
django_svg_icon_tags =
    templates/svg_icon_tags/*.html
    templatetags/*.py

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-django>=4.5.0
    pytest-cov>=3.0.0
    black>=22.0.0
    flake8>=4.0.0

[flake8]
max-line-length = 120
exclude = .git,__pycache__,build,dist,migrations